fixing layout issues on landing and header components

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,11 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+/* 
+html {
+  width: 150vw;
+  height: 100vh;
+} */
 
 #bigBody {
   background-color: rgba(100, 110, 100, 1);
@@ -19,13 +24,20 @@ body {
   
 }
 
-#landingback {
+.landingFont {
+  font-size: large;
+  display: flex;
+  height: 30vh;
+}
+
+.landingback {
   background-image: url(https://i.imgur.com/abbkxj3.jpg);
   background-repeat: repeat;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  margin-top: 10rem;
-  padding: 2rem;
+  /* margin-top: 10rem; */
+  display: block;
+  /* padding: 2rem; */
   font-size: 7rem;
   font-weight: bold;
   text-transform: uppercase;
@@ -33,12 +45,12 @@ body {
            helvetica, arial, sans-serif;
   font-weight: 800;
   -webkit-font-smoothing: antialiased;
-  height: 100%;
-  width: 100%;
+  /* height: 50vh;
+  width: 100%; */
   /* text-align: center;
-  align-items: center;
-  justify-content: center; */
-  position: relative;
+  align-items: center; */
+  justify-content: center;
+  /* position: relative; */
   animation-name: bground;
   animation-duration: 16s;
   animation-iteration-count: infinite;
